--- a/src/less/demo.less
+++ b/src/less/demo.less
@@ -1,9 +1,9 @@
 html,body{
   background-color: gray;
   .title{
-    background-color: skyblue;
+    background-color: red;
   }
-/*  .test1{
+  .test1{
     width: 200px;
     height: 200px;
     background-repeat: no-repeat;
@@ -17,5 +17,5 @@ html,body{
     background-repeat: no-repeat;
     background-image: url("../img/vue.png");
     background-size: 100% 100%;
-  }*/
+  }
 }
