--- a/src/less/demo.less
+++ b/src/less/demo.less
@@ -10,6 +10,7 @@ html,body{
     background-image: url("../img/react.jpg");
     background-size: 100% 100%;
     display: flex;
+    border-radius: 3px;
   }
   .test2{
     width: 200px;
